.backup_gl_to_gov_20260209_214318/.backup_gl_to_gov_20260209_214301/archives/old-outputs/workspace-output-1769587364-4934.txt
  File ".agent_hooks/shutdown/00_track_processes_on_ports.py", line 4
    * @GL-semantic: 00_track_processes_on_ports
                      ^
SyntaxError: invalid decimal literal
